--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,7 +13,13 @@
         align-items: center;
         width: 100%;
         max-width: 800px;
-        padding: 15px 0;
+        padding: 15px;
+
+        @media @mobile {
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 7px 0;
+        }
 
         a {
             margin-left: 30px;
@@ -25,6 +31,10 @@
             &:hover {
                 color: @eastern-blue;
             }
+
+            @media @mobile {
+                margin: 0 15px;
+            }
         }
 
         #logo {
@@ -34,6 +44,12 @@
             
             &:hover {
                 color: @font-color;
+            }
+
+            @media @mobile {
+                text-align: center;
+                width: 100%;
+                margin: 0 0 15px;
             }
         }
     }
